err/pygeno.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyGeno'...
Compiling './lib/python3.5/site-packages/pyGeno/bootstrap.py'...
***   File "./lib/python3.5/site-packages/pyGeno/bootstrap.py", line 47
    print json.dumps(l["Ordered"], sort_keys=True, indent=4, separators=(',', ': '))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyGeno/bootstrap_data'...
Listing './lib/python3.5/site-packages/pyGeno/bootstrap_data/SNPs'...
Listing './lib/python3.5/site-packages/pyGeno/bootstrap_data/genomes'...
Listing './lib/python3.5/site-packages/pyGeno/examples'...
Compiling './lib/python3.5/site-packages/pyGeno/examples/snps_queries.py'...
***   File "./lib/python3.5/site-packages/pyGeno/examples/snps_queries.py", line 11
    print "printing reference sequences\n-------"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyGeno/importation'...
Listing './lib/python3.5/site-packages/pyGeno/tests'...
Compiling './lib/python3.5/site-packages/pyGeno/tests/test_genome.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tests/test_genome.py", line 13
    print "--> Seems to already exist in db"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyGeno/tools'...
Compiling './lib/python3.5/site-packages/pyGeno/tools/BinarySequence.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tools/BinarySequence.py", line 243
    except TypeError, te:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyGeno/tools/ProgressBar.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tools/ProgressBar.py", line 119
    print '\n'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGeno/tools/SegmentTree.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tools/SegmentTree.py", line 353
    print "Tree:"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGeno/tools/UsefulFunctions.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tools/UsefulFunctions.py", line 18
    print "Saving results :\n\t%s..."%resPath
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGeno/tools/io.py'...
***   File "./lib/python3.5/site-packages/pyGeno/tools/io.py", line 6
    print e,
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyGeno/tools/parsers'...
Listing './lib/python3.5/site-packages/pyGeno-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/rabaDB'...
Listing './lib/python3.5/site-packages/rabaDB/examples'...
Compiling './lib/python3.5/site-packages/rabaDB/examples/QueryExample.py'...
***   File "./lib/python3.5/site-packages/rabaDB/examples/QueryExample.py", line 28
    print "The chromosome is here but not fully loaded"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rabaDB/filters.py'...
***   File "./lib/python3.5/site-packages/rabaDB/filters.py", line 291
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rabaDB/rabaSetup.py'...
***   File "./lib/python3.5/site-packages/rabaDB/rabaSetup.py", line 207
    print "Next query: %s\nWith params: %s\n(c)ontinue/(s)top:" % (sql, values)
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rabaDB-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
